--- a/qna.html
+++ b/qna.html
@@ -32,27 +32,28 @@
         <nav class="font-poppins pt-2">
           <div class="navbar max-w-screen-lg mx-auto bg-base-100  bg-white rounded-xl  shadow-md">
             <section class="flex items-center space-x-2 flex-1">
-              <img src="./assets/logo.png" alt="" />
+              <img class="h-7" src="./assets/logo.png" alt="" />
               <div class="flex items-center justify-center">
-                <a class="text-2xl">Dev<span class="font-bold">Board</span></a>
+                <a class="text-xl">Dev<span class="font-bold">Board</span></a>
               </div>
             </section>
             <div class="">
-              <a href="./index.html"><button class="btn btn-primary rounded-xl">Back To Dashboard</button></a>
+              <a href="./index.html"><button class="btn btn-primary rounded-md">Back To Desk</button></a>
             </div>
           </div>
         </nav>
       </header>
-      <main class="max-w-screen-lg mx-auto mt-16">
+      <h1 class="text-2xl font-bold text-center mt-2">Blogs</h1>
+      <main class="max-w-screen-lg mx-auto mt-8">
         <div class="bg-[#F4F7FF] h-28 rounded-xl p-4 mt-4">
           <h1>Question-1: What are the different ways to select an element in the DOM?</h1>
           <p class="border-b mt-4 border-dashed w-full"></p>
-          <h1> </h1>
+          <h1>There are 3 ways to select an element in DOM . These are: <br> 1.getElementById        2.getElementByTagName  3.querySelector:which detect 1st element .</h1>
         </div>
         <div class="bg-[#F4F7FF] h-28 rounded-xl p-4 mt-4">
           <h1>Question-2: What is the difference between innerHTML, innerText, and textContent ?</h1>
           <p class="border-b mt-4 border-dashed w-full"></p>
-          <h1> </h1>
+          <h1>There are some difference between these. innetHTML can contains different element with tag and innerText contains only a tag inner value or text.And also textContent delivered only the text without tag which  html element we want . </h1>
         </div>
         <div class="bg-[#F4F7FF] h-28 rounded-xl p-4 mt-4">
           <h1>Question-3: What is event delegation in the DOM?</h1>
@@ -67,7 +68,7 @@
         <div class="bg-[#F4F7FF] h-28 rounded-xl p-4 mt-4">
           <h1>How do you create, add, and remove elements using JavaScript?</h1>
           <p class="border-b mt-4 border-dashed w-full"></p>
-          <h1> </h1>
+          <h1> To create an element declare a variable which contain this and variable value is document.createElemant('tag').To add a element firstly declare a container or acces the element where we want to append this. If we append a chid last call will be container.appendchild(),either we remove a child it will be container.removechild() </h1>
         </div>
       </main>
 </body>
