--- a/index.html
+++ b/index.html
@@ -28,9 +28,9 @@
     </style>
   </head>
 
-  <body id="body" class="bg-[#F4F7FF] pt-2">
+  <body id="body" class="font-poppins bg-[#F4F7FF] pt-2">
     <header>
-      <nav class="font-poppins">
+      <nav>
         <div
           class="navbar max-w-screen-lg mx-auto bg-base-100 bg-white rounded-xl shadow-md"
         >
@@ -102,7 +102,7 @@
               </div>
             </div>
           </section>
-
+          <p class="border-b border-dashed mt-2 text-blue-300"></p>
           <section class="grid grid-cols-3 gap-2 mt-4">
             <div class="card w-[240px] bg-[#F4F7FF] card-sm shadow-sm">
               <div class="card-body space-y-2">
@@ -116,9 +116,9 @@
                 <div class="flex items-center">
                   <div class="flex-1">
                     <p class="text-sm">Deadline</p>
-                    <p class="font-semibold text-sm">21 March 2025</p>
+                    <p class="font-semibold text-xs">21 March 2025</p>
                   </div>
-                  <button class="btn btn-primary complete-btn">
+                  <button class="btn btn-primary w-22 complete-btn">
                     Completed
                   </button>
                 </div>
@@ -136,9 +136,9 @@
                 <div class="flex items-center">
                   <div class="flex-1">
                     <p class="text-sm">Deadline</p>
-                    <h3 class="font-semibold text-sm">21 March 2025</h3>
+                    <h3 class="font-semibold text-xs">21 March 2025</h3>
                   </div>
-                  <button id="btn-p" class="btn btn-primary complete-btn">
+                  <button id="btn-p" class="btn btn-primary w-22 complete-btn">
                     Completed
                   </button>
                 </div>
@@ -158,9 +158,9 @@
                 <div class="flex items-center">
                   <div class="flex-1">
                     <p class="text-sm">Deadline</p>
-                    <h3 class="font-semibold text-sm">21 March 2025</h3>
+                    <h3 class="font-semibold text-xs">21 March 2025</h3>
                   </div>
-                  <button class="btn btn-primary complete-btn">
+                  <button class="btn btn-primary w-22 complete-btn">
                     Completed
                   </button>
                 </div>
@@ -178,9 +178,9 @@
                 <div class="flex items-center">
                   <div class="flex-1">
                     <p class="text-sm">Deadline</p>
-                    <h3 class="font-semibold text-sm">21 March 2025</h3>
+                    <h3 class="font-semibold text-xs">21 March 2025</h3>
                   </div>
-                  <button class="btn btn-primary complete-btn">
+                  <button class="btn btn-primary w-22 complete-btn">
                     Completed
                   </button>
                 </div>
@@ -188,7 +188,7 @@
             </div>
             <div class="card w-[240px] bg-[#F4F7FF] card-sm shadow-sm">
               <div class="card-body space-y-2">
-                <p class="p-2 w-20 rounded bg-white text-xs text-center">
+                <p class="p-2 w-22 rounded bg-white text-xs text-center">
                   Google LLC
                 </p>
                 <h2 class="card-title">Integrate OpenAI API</h2>
@@ -199,10 +199,10 @@
                 </p>
                 <div class="flex items-center">
                   <div class="flex-1">
-                    <p class="text-sm">Deadline</p>
-                    <h3 class="font-semibold text-sm">21 March 2025</h3>
+                    <p class="text-xs">Deadline</p>
+                    <h3 class="font-semibold text-xs">21 March 2025</h3>
                   </div>
-                  <button class="btn btn-primary complete-btn">
+                  <button class="btn btn-primary w-22 complete-btn">
                     Completed
                   </button>
                 </div>
@@ -210,7 +210,7 @@
             </div>
             <div class="card w-[240px] bg-[#F4F7FF] card-sm shadow-sm">
               <div class="card-body space-y-2">
-                <p class="p-2 w-20 rounded bg-white text-center">Glassdoar</p>
+                <p class="p-2 w-20 rounded bg-white text-xs text-center">Glassdoar</p>
                 <h2 class="card-title">Improve Job searching</h2>
                 <p class="bg-white rounded p-1 text-sm truncate">
                   Debug using Chrome <br />DevTools, check for overlapping
@@ -220,9 +220,9 @@
                 <div class="flex items-center">
                   <div class="flex-1">
                     <p class="text-sm">Deadline</p>
-                    <h3 class="font-semibold text-sm">21 March 2025</h3>
+                    <h3 class="font-semibold text-xs">21 March 2025</h3>
                   </div>
-                  <button class="btn btn-primary complete-btn">
+                  <button class="btn btn-primary w-22 complete-btn">
                     Completed
                   </button>
                 </div>
@@ -235,16 +235,16 @@
           <div class="flex flex-col justify-center items-center">
             <div class="flex justify-center items-center gap-2">
               <img class="h-5" src="./assets/activity.png" alt="" />
-              <h1 class="text-lg">Activity log</h1>
+              <h1 class="text-lg font-semibold">Activity log</h1>
             </div>
 
             <div>
-              <button id="clear-btn" class="btn btn-primary mt-2">
+              <button id="clear-btn" class="btn btn-primary w-36 mt-2">
                 Clear-History
               </button>
             </div>
           </div>
-          <p class="border-b mt-4 border-dotted w-full"></p>
+          <p class="border-b mt-4 border-dashed text-blue-300 w-full"></p>
 
           <section id="fix-release" class="font-semibold"></section>
         </section>
