--- a/qna.html
+++ b/qna.html
@@ -27,7 +27,7 @@
     }
   </style>
 </head>
-<body>
+<body class="font-poppins bg-[#F4F7FF] pb-2">
     <header>
         <nav class="font-poppins pt-2">
           <div class="navbar max-w-screen-lg mx-auto bg-base-100  bg-white rounded-xl  shadow-md">
@@ -44,31 +44,31 @@
         </nav>
       </header>
       <h1 class="text-2xl font-bold text-center mt-2">Blogs</h1>
-      <main class="max-w-screen-lg mx-auto mt-8">
-        <div class="bg-[#F4F7FF] h-28 rounded-xl p-4 mt-4">
+      <main class="max-w-screen-lg mx-auto mt-4">
+        <div class="bg-white h-28 rounded-xl p-4 mt-4">
           <h1>Question-1: What are the different ways to select an element in the DOM?</h1>
-          <p class="border-b mt-4 border-dashed w-full"></p>
-          <h1>There are 3 ways to select an element in DOM . These are: <br> 1.getElementById        2.getElementByTagName  3.querySelector:which detect 1st element .</h1>
+          <p class="border-b mt-4 border-dashed text-blue-300 w-full"></p>
+          <h1><span class="font-bold">Ans:</span> There are 3 ways to select an element in DOM.These are: <br> 1.getElementById        2.getElementByTagName  3.querySelector:which detect 1st element .</h1>
         </div>
-        <div class="bg-[#F4F7FF] h-28 rounded-xl p-4 mt-4">
+        <div class="bg-white h-28 rounded-xl p-4 mt-4">
           <h1>Question-2: What is the difference between innerHTML, innerText, and textContent ?</h1>
-          <p class="border-b mt-4 border-dashed w-full"></p>
-          <h1>There are some difference between these. innetHTML can contains different element with tag and innerText contains only a tag inner value or text.And also textContent delivered only the text without tag which  html element we want . </h1>
+          <p class="border-b mt-4 border-dashed text-blue-300 w-full"></p>
+          <h1><span class="font-bold">Ans:</span> There are some difference between these. innetHTML can contains different element with tag and innerText contains only a tag inner value or text.And also textContent delivered only the text without tag which  html element we want . </h1>
         </div>
-        <div class="bg-[#F4F7FF] h-28 rounded-xl p-4 mt-4">
+        <div class="bg-white h-28 rounded-xl p-4 mt-4">
           <h1>Question-3: What is event delegation in the DOM?</h1>
-          <p class="border-b mt-4 border-dashed w-full"></p>
-          <h1> </h1>
+          <p class="border-b mt-4 border-dashed text-blue-300 w-full"></p>
+          <h1><span class="font-bold">Ans:</span> Event Delegation is a technique which worked replaced every element addeventlistener.Its automatically worked when we add a event listener in parent.</h1>
         </div>
-        <div class="bg-[#F4F7FF] h-28 rounded-xl p-4 mt-4">
-          <h1>Question-4: What is event bubbling in the DOM?          </h1>
-          <p class="border-b mt-4 border-dashed w-full"></p>
-          <h1> </h1>
+        <div class="bg-white h-32 rounded-xl p-4 mt-4">
+          <h1>Question-4: What is event bubbling in the DOM?</h1>
+          <p class="border-b mt-4 border-dashed text-blue-300 w-full"></p>
+          <h1><span class="font-bold">Ans:</span> Event Bubble is a machanism which hits firstly exact location.Then works exact location parent and then granparent.If a button tag remain in a div ,and this div also located in html body. If we click this button its work and then steadily work in div and then body.</h1>
         </div>
-        <div class="bg-[#F4F7FF] h-28 rounded-xl p-4 mt-4">
+        <div class="bg-white h-32 rounded-xl p-4 mt-4">
           <h1>How do you create, add, and remove elements using JavaScript?</h1>
-          <p class="border-b mt-4 border-dashed w-full"></p>
-          <h1> To create an element declare a variable which contain this and variable value is document.createElemant('tag').To add a element firstly declare a container or acces the element where we want to append this. If we append a chid last call will be container.appendchild(),either we remove a child it will be container.removechild() </h1>
+          <p class="border-b mt-4 border-dashed text-blue-300 w-full"></p>
+          <h1><span class="font-bold">Ans:</span> To create an element declare a variable which contain this and variable value is document.createElemant('tag').To add a element firstly declare a container or acces the element where we want to append this. If we append a chid last call will be container.appendchild(),either we remove a child it will be container.removechild().</h1>
         </div>
       </main>
 </body>
